--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
 
     <!-- Footer -->
     <footer>
-        <p>Contact: info@jetwinghotels.com | (123) 456-7890</p>
+        <p>Contact: info@jetwinghotels.com | +94 123 456-7890</p>
         <div class="social-links">
-            <a href="#">Facebook</a>
-            <a href="#">Twitter</a>
-            <a href="#">Instagram</a>
+            <a href="https://www.facebook.com/jetwinghotels/">Facebook</a>
+            <a href="https://x.com/jetwinghotels">X</a>
+            <a href="https://www.instagram.com/jetwinghotels/?hl=en">Instagram</a>
         </div>
     </footer>
 </body>
